# cc-conversation-search

./: .gitignore  CLAUDE.md  CONTEXT_SEARCH.md  DAEMON.md  DEPLOYMENT.md  README.md  REFACTOR_SUMMARY.md  config.example.json  pyproject.toml  requirements.txt  schema.sql
.claude/agents/: haiku-summary.md  summarizer.md
.claude/commands/: search.md
.claude/skills/: search-conversations.md
hooks/: post-message.sh
skill/: INSTALL.md  README.md  REFERENCE.md  SKILL.md
skills/conversation-search/: SKILL.md
src/: indexer.py  search.py  summarization.py  summarize_and_index.py  watcher_daemon.py
src/claude_finder/: cli.py
src/claude_finder/core/: __init__.py  indexer.py  search.py  summarization.py  watcher.py
src/conversation_search/: cli.py
src/conversation_search/core/: search.py
