[project]
name = "claude-finder"
version = "0.2.0"
description = "Semantic search across Claude Code conversation history"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "watchdog>=3.0.0",
]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
claude-finder = "claude_finder.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/claude-finder"
Issues = "https://github.com/yourusername/claude-finder/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_finder"]

[tool.hatch.build.targets.wheel.force-include]
"src/claude_finder/data/schema.sql" = "claude_finder/data/schema.sql"
